[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/AdminControls/AdminControls.gd" type="Script" id=1]
[ext_resource path="res://Scenes/AboutDocumentation/AboutWindow.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[node name="AdminPanel" type="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -226.0
margin_top = -292.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 219.0
margin_bottom = 285.0
size_flags_horizontal = 3

[node name="Clock" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 212.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Clock"]
margin_left = 30.0
margin_right = 181.0
margin_bottom = 40.0
size_flags_horizontal = 4

[node name="LabelCurrentTime" type="Label" parent="PanelContainer/VBoxContainer/Clock/HBoxContainer"]
margin_top = 13.0
margin_right = 87.0
margin_bottom = 27.0
size_flags_horizontal = 12
text = "Current Time:"

[node name="LabelTime" type="Label" parent="PanelContainer/VBoxContainer/Clock/HBoxContainer"]
margin_left = 91.0
margin_top = 13.0
margin_right = 151.0
margin_bottom = 27.0
size_flags_horizontal = 4
text = "12:20 PM"

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 212.0
margin_bottom = 74.0
rect_min_size = Vector2( 150, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Add New Employee"

[node name="Button2" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 212.0
margin_bottom = 108.0
rect_min_size = Vector2( 150, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Update Employee"

[node name="Button6" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 212.0
margin_bottom = 142.0
rect_min_size = Vector2( 150, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "View Employee Log"

[node name="Button3" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 146.0
margin_right = 212.0
margin_bottom = 176.0
rect_min_size = Vector2( 150, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Gen. Single Report"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 212.0
margin_bottom = 210.0
size_flags_vertical = 3

[node name="Button4" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Gen. Full Report"

[node name="LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 212.0
margin_bottom = 30.0
max_length = 4
secret = true
clear_button_enabled = true
placeholder_text = "Pin"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 214.0
margin_right = 212.0
margin_bottom = 244.0
size_flags_vertical = 3

[node name="Button5" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Settings"

[node name="LineEdit2" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 154.0
margin_right = 212.0
margin_bottom = 30.0
max_length = 4
secret = true
clear_button_enabled = true
placeholder_text = "Pin"

[node name="Button7" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 248.0
margin_right = 212.0
margin_bottom = 278.0
rect_min_size = Vector2( 150, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "About Software"

[node name="AboutWindow" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="text_entered" from="PanelContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/Button5" to="." method="_on_Button5_pressed"]
[connection signal="text_entered" from="PanelContainer/VBoxContainer/HBoxContainer2/LineEdit2" to="." method="_on_LineEdit2_text_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button7" to="." method="_on_Button7_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
